fix flag toggle; align items center on flag account

--- a/static/css/cards/flag.css
+++ b/static/css/cards/flag.css
@@ -157,7 +157,8 @@ html.msb .masthead {
   display: flex;
   grid-area: right;
   justify-self: end;
-  align-self: center;
+  align-self: stretch;
+  align-items: center;
   text-wrap: nowrap;
 }
 
